# casadi-matlab-bindings

./: CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: conda-ci.yml  regenerate-matlab-bindings.yml  regenerate-matlab-bindings.yml.yml
autogenerated/cxx/: casadiMATLAB_wrap.h
autogenerated/matlab/+casadi/: Callback.m  CasadiMeta.m  CodeGenerator.m  DM.m  DaeBuilder.m  DeserializerBase.m  FileDeserializer.m  FileSerializer.m  Function.m  GenDM.m  GenMX.m  GenSX.m  GenericExpressionCommon.m  GenericMatrixCommon.m  GlobalOptions.m  Importer.m  IndexAbstraction.m  Linsol.m  MX.m  MatrixCommon.m  MetaCon.m  MetaVar.m  NlpBuilder.m  Opti.m  OptiAdvanced.m  OptiCallback.m  OptiSol.m  SX.m  SXElem.m  SerializerBase.m  Slice.m  Sparsity.m  StringDeserializer.m  StringSerializer.m  Variable.m  XmlFile.m  blockcat.m  bspline.m  collocation_coeff.m  collocation_interpolators.m  (+86 more)
